<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NBJ Condenser</string>
    <string name="app_icon">NBJ Condenser icon</string>
    <string name="idle_message">AI-Powered Video Condensation</string>
    <string name="how_to_use">Share a YouTube video to NBJ Condenser to get started.\n\nTap the Share button on any YouTube video and select NBJ Condenser from the list.</string>
    <string name="processing">Processing video…</string>
    <string name="cancel">Cancel</string>
    <string name="play_video">Play Video</string>
    <string name="settings">Settings</string>
    <string name="server_url">Server URL</string>
    <string name="server_url_hint">http://conciser.603apps.net</string>

    <string-array name="server_url_options">
        <item>Select a server or enter custom URL...</item>
        <item>https://conciser.603apps.net</item>
        <item>http://x13-wsl.puma-garibaldi.ts.net:5000</item>
        <item>http://cuda-linux.puma-garibaldi.ts.net:5000</item>
        <item>Custom URL...</item>
    </string-array>
    <string name="save">Save</string>
    <string name="server_status_not_checked">Server status not checked</string>
    <string name="server_status_invalid">Enter a valid server URL to check</string>
    <string name="server_status_checking">Checking server…</string>
    <string name="server_status_ok">Server OK</string>
    <string name="server_status_http_error">Server responded %1$d</string>
    <string name="server_status_unreachable">Could not reach server</string>
    <string name="server_status_reported_issue">Server reported: %1$s</string>
    <string name="video_mode">Output Mode</string>
    <string name="voice">Voice</string>
    <string name="aggressiveness">Aggressiveness</string>
    <string name="speech_speed">Speech Speed</string>
    <string name="condense_video">Condense Video</string>
    <string name="watch_video">Watch Video</string>
    <string name="waiting_for_video">Share a YouTube video to start</string>
    <string name="recent_jobs">Recent</string>
    <string name="prepend_intro">Prepend key take-aways intro</string>
</resources>
